--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-html,
-body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
 }
 
 .upper-grid {
@@ -17,73 +16,106 @@ body {
 .side {
     grid-column: 1/2;
     grid-row: 1/6;
-    background-color: rgb(101, 172, 242);
-}
-
-.top {
-    grid-column: 2/5;
-    grid-row: 1/2;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.30);
-    z-index: 1;
-}
-
-.main {
-    grid-column: 2/5;
-    grid-row: 2/6;
+    background-color: #0288d1;
+    padding: 20px;
 }
 
 .side-logo {
     color: white;
     text-align: center;
-    font-size: 30px;
-    font-weight: 700;
+
+    padding: 10px 30px;
+    margin-bottom: 40px;
 }
 
-.side-logo>p>i {
+.side-logo p {
     margin: 5px;
+    font-size: 24px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 12px;
 }
 
 .side-list {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     /* justify-content: center;
     align-items: center; */
-    margin-left: 90px;
-    margin-top: 20px;
+    /* margin-left: 90px;
+    margin-top: 20px; */
+    margin-bottom: 40px;
 }
 
 .side-list>div {
-    padding: 10px;
-    color: white;
-    font-weight: 600;
-}
-
-.side-list2 {
     display: flex;
-    flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
-    margin-left: 90px;
-    margin-top: 50px;
-}
-
-.side-list2>div {
-    padding: 10px;
+    align-items: center;
+    gap: 20px;
+    padding: 12px 30px;
     color: white;
-    font-weight: 600;
+    text-decoration: none;
+    font-weight: 500;
+    transition: background-color 0.2s;
 }
 
-.top {}
+.side-list>div:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* SIDEBAR ENDS */
+
+/* Top bar begins */
+
+.top {
+    grid-column: 2/5;
+    grid-row: 1/2;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+}
 
 .top1 {
+    margin-top: 10px;
+    background-color: white;
+    padding: 10px 40px;
     display: flex;
-    margin-top: 20px;
-
+    align-items: center;
+    justify-content: space-between;
 }
 
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex: 1;
+    max-width: 600px;
+}
 
+.search-container input {
+    width: 100%;
+    padding: 8px;
+    border: none;
+    background-color: #f1f5f9;
+    border-radius: 20px;
+}
 
-.top2 {}
+.user-info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-right: 70px;
+}
 
+.profilepic{
+    content: '';
+    background-color: grey;
+    border-radius: 50px;
+    width: 32px;
+    height: 32px;
+}
 
-    
+.main {
+    grid-column: 2/5;
+    grid-row: 2/6;
+    background-color: #d7d7d7;
+    padding: 20px;
+}
