--- a/style.css
+++ b/style.css
@@ -21,29 +21,25 @@
 }
 
 .side-logo {
+    display: flex;
+    justify-content: center;
     color: white;
-    text-align: center;
+    padding: 10px 0px;
+}
 
-    padding: 10px 30px;
-    margin-bottom: 40px;
+.side-logo:hover{
+    cursor: pointer;
 }
 
 .side-logo p {
-    margin: 5px;
     font-size: 24px;
     font-weight: 600;
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 15px;
 }
 
-.side-list {
-    /* display: flex;
-    flex-direction: column; */
-    /* justify-content: center;
-    align-items: center; */
-    /* margin-left: 90px;
-    margin-top: 20px; */
+.mb40 {
     margin-bottom: 40px;
 }
 
@@ -60,6 +56,7 @@
 
 .side-list>div:hover {
     background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
 }
 
 /* SIDEBAR ENDS */
@@ -168,119 +165,5 @@
     background-color: #0288d1;
 }
 
-.main {
-    grid-column: 2/5;
-    grid-row: 2/6;
-    background-color: #d7d7d7;
-    padding: 20px;
-    display: grid;
-    grid-template: 1.75rem 1fr / 2fr 1fr;
-}
-
-div.project {
-    margin-top: 15px;
-    display: grid;
-    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
-    gap: 15px;
-}
-
-div.project-item {
-    /* border: 1px solid blue; */
-    border-left: 5px solid orange;
-    border-radius: 10px;
-    background-color: white;
-    padding: 15px;
-    /* display: grid; 
-    grid-template-rows: 1em 2fr 1em; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.project-item p {
-    justify-self: start;
-    color: green;
-    align-self: start;
-    font-size: 14px;
-    margin-top: 5px;
-}
-
-.project-icon-container {
-    align-self: end;
-    display: flex;
-    gap: 15px;
-}
-
-.project-item i {
-    width: 1.0rem;
-    aspect-ratio: 1 / 1;
-}
-
-div.project-title,
-div.annc-title {
-    align-self: end;
-    font-weight: bold;
-}
-
-.annc-title {
-    margin-left: 15px;
-}
-
-.announcements-and-trending {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 15px;
-    grid-template-rows: min-content 1.75rem min-content;
-    margin-left: 15px;
-    margin-top: 15px;
-
-}
-
-.announcements-container {
-    background-color: white;
-    padding: 15px;
-    border-radius: 10px;
-    height: min-content;
-    display: flex;
-    flex-direction: column;
-}
-.announcements-container{
-    font-size: 15px;
-}
-
-.trending-container {
-    background-color: white;
-    padding: 15px 15px;
-    border-radius: 10px;
-    /* display: grid;
-    grid-template-rows: repeat(auto-fill, min(1fr, .5rem)); */
-    display: flex;
-    flex-direction: column;
-    height: min-content;
-}
-
-p {
-    /* font-family: Arial, Helvetica, sans-serif; */
-    font-size: 12px;
-    margin-bottom: 5px;
-}
 
 
-
-.announcements-and-trending p,
-.announcements-and-trending strong {
-    /* font-family: Arial, Helvetica, sans-serif; */
-    font-size: 11px;
-}
-
-.trending {
-    align-self: end;
-    font-weight: bold;
-}
-
-.trending-items {
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    padding: 5px;
-}
