--- a/style.css
+++ b/style.css
@@ -103,11 +103,11 @@
 }
 
 .profilepic {
-    content: '';
-    background-color: grey;
+    /* content: ''; */
+    /* background-color: grey; */
     border-radius: 50px;
-    width: 32px;
-    height: 32px;
+    /* width: 32px;
+    height: 32px; */
 }
 
 /* Top bar 1st part end */
@@ -131,10 +131,10 @@
 }
 
 .h-left div {
-    content: "";
+    /* content: "";
     background-color: grey;
     width: 50px;
-    height: 50px;
+    height: 50px; */
     border-radius: 50%;
 }
 
